src/test/ui/no-type-for-node-ice.stderr
error[E0609]: no field `homura` on type `&'static str`
  --> $DIR/no-type-for-node-ice.rs:14:8
   |
LL |     "".homura[""]; //~ no field `homura` on type `&'static str`
   |        ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
