src/test/ui/no-type-for-node-ice.rs
// Copyright 2015 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Related issues: #20401, #20506, #20614, #20752, #20829, #20846, #20885, #20886

fn main() {
    "".homura[""]; //~ no field `homura` on type `&'static str`
}
